Remove "static" links

--- a/detail.html
+++ b/detail.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<link href="static/detail.css" rel="stylesheet" type="text/css" media="screen">
+<link href=" detail.css" rel="stylesheet" type="text/css" media="screen">
 
 <body>
   <div class="details">
