--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<link href="static/login.css" rel="stylesheet" type="text/css" media="screen">
+<link href=" login.css" rel="stylesheet" type="text/css" media="screen">
 <body>
   <div class="login">
     <form method="POST" action="/login">
