--- a/post_questions.html
+++ b/post_questions.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<link href="static/ask.css" rel="stylesheet" type="text/css" media="screen">
+<link href=" ask.css" rel="stylesheet" type="text/css" media="screen">
 <body>
 <div class="ask">
   <form method="POST" action="" enctype="multipart/form-data">
