--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<link href="static/signup.css" rel="stylesheet" type="text/css" media="screen">
+<link href=" signup.css" rel="stylesheet" type="text/css" media="screen">
 <body>
   <div class="signup">
     <form method="POST" action="{{ url_for('register') }}">
