--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <html>
 <head>
 <title>StackOverflow-lite</title>
-<link href="static/index.css" rel="stylesheet" type="text/css" media="screen">
-<script src="static/index.js"></script>
+<link href=" index.css" rel="stylesheet" type="text/css" media="screen">
+<script src=" index.js"></script>
 </head>
 
 <body>
 
 
   <nav class="left">
-    <img src="static/stack.png" alt="Logo" width="300px">
+    <img src=" stack.png" alt="Logo" width="300px">
     <h3> Logged in as: {{current_user.username}}</h3>
 
   </nav>
